feat: Add authentication view with localization and SVG icons; update theme and localization files

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,7 @@
 {
-    "home":"Home"
+  "home": "Home",
+  "registerWithZefyr": "Register with Zefyr",
+  "continueWithEmail": "Continue with email address",
+  "continueWithGoogle": "Continue with Google",
+  "continueWithApple": "Continue with Apple"
 }
