feat(auth): implement birth date selection and update flow
- Added `BirthDateView` for selecting user's birth date during registration.
- Updated `AuthFlowViewModel` to handle new flow for birth date input.
- Modified navigation logic to include birth date step for registration.
- Enhanced localization files to support birth date related strings in English and Russian.
- Created new views for email input, email login, password input, and nickname input.
- Refactored `AppTextField` widget for better reusability across different input types.
- Updated UI components to improve user experience and maintain consistency in design.

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -37,5 +37,21 @@
         "type": "String"
       }
     }
-  }
+  },
+  "birthDateTitle": "Когда у вас день рождения?",
+  "birthDateDescription": "Мы не покажем ваш день рождения другим пользователям.",
+  "birthDateLabel": "День рождения",
+  "continueButton": "Продолжить",
+  "january": "Января",
+  "february": "Февраля",
+  "march": "Марта",
+  "april": "Апреля",
+  "may": "Мая",
+  "june": "Июня",
+  "july": "Июля",
+  "august": "Августа",
+  "september": "Сентебря",
+  "october": "Октебря",
+  "november": "Ноября",
+  "december": "Декабря"
 }
