--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,5 +37,21 @@
         "type": "String"
       }
     }
-  }
+  },
+  "birthDateTitle": "When is your birthday?",
+  "birthDateDescription": "We won't show your birthday to other users.",
+  "birthDateLabel": "Birthday",
+  "continueButton": "Continue",
+  "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December"
 }
