--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -8,7 +8,7 @@
   "signUp": "Зарегистрироваться",
   "forgotPassword": "Забыли пароль?",
   "resetPassword": "Сбросить пароль",
-  "email": "Эл. почта",
+  "email": "Электронная почта",
   "password": "Пароль",
   "confirmPassword": "Подтвердить пароль",
   "signInWithGoogle": "Войти с помощью Google",
@@ -53,5 +53,19 @@
   "september": "Сентебря",
   "october": "Октебря",
   "november": "Ноября",
-  "december": "Декабря"
+  "december": "Декабря",
+  "emailPasswordPrompt": "Введите адрес эл. почты и придумайте пароль",
+  "enterEmail": "Введите электронную почту",
+  "enterValidEmail": "Введите корректую электронную почту",
+  "enterPassword": "Введите пароль",
+  "passwordLength": "8 символов (не более 20)",
+  "passwordRequirements": "1 буква, 1 цифра, 1 специальный символ (# ? ! @)",
+  "strongPassword": "Надежный пароль",
+  "emailUsernameLabel": "Адрес эл. почты/имя пользователя",
+  "emailUsername": "Почта или имя пользователя",
+  "enterEmailUsername": "Введите почту или имя пользователя",
+  "skip": "Пропустить",
+  "createNickname": "Создайте никнейм",
+  "nicknameDescription": "Укажите любой никнейм, который вам нравится. Если пропустить этот шаг, вам будет автоматически присвоен стандартный никнейм. Его можно будет изменить позже.",
+  "enterNickname": "Введите никнейм"
 }
