--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -67,5 +67,7 @@
   "skip": "Пропустить",
   "createNickname": "Создайте никнейм",
   "nicknameDescription": "Укажите любой никнейм, который вам нравится. Если пропустить этот шаг, вам будет автоматически присвоен стандартный никнейм. Его можно будет изменить позже.",
-  "enterNickname": "Введите никнейм"
+  "enterNickname": "Введите никнейм",
+  "passwordLengthError": "Пароль должен быть от 8 до 20 символов",
+  "passwordShouldContainAll": "Пароль должен содержать хотя бы одну букву, цифру и специальный символ"
 }
