feat: Add streaming functionality with localization support
- Implemented stream creation and stopping features in the live module.
- Added StreamDataSource, StreamRepository, and use cases for creating and ending streams.
- Introduced StreamModel, StreamCreateRequest, and StreamCreateResponse models for handling stream data.
- Created StreamViewModel to manage stream state and actions.
- Added localization strings for stream setup in both English and Russian.
- Updated app localization files and Dart localization classes to include new stream-related strings.
- Refactored existing localization code for improved readability and consistency.
- Added OnAirView as a placeholder for the streaming UI.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -69,5 +69,13 @@
   "nicknameDescription": "Enter any nickname you like. If you skip this step, you will be automatically assigned a default nickname. You can change it later.",
   "enterNickname": "Enter nickname",
   "passwordLengthError": "Password must be between 8 and 20 characters",
-  "passwordShouldContainAll": "Password must contain at least one letter, one number, and one special character"
+  "passwordShouldContainAll": "Password must contain at least one letter, one number, and one special character",
+  "streamSetup": "Stream Setup",
+  "streamTitle": "Stream Title",
+  "enterStreamTitle": "Enter stream title",
+  "enterStreamTitleError": "Please enter stream title",
+  "streamDescription": "Stream Description",
+  "enterStreamDescription": "Describe your stream...",
+  "streamPreviewUrl": "Preview URL",
+  "startStream": "Start Stream"
 }
