--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -69,5 +69,13 @@
   "nicknameDescription": "Укажите любой никнейм, который вам нравится. Если пропустить этот шаг, вам будет автоматически присвоен стандартный никнейм. Его можно будет изменить позже.",
   "enterNickname": "Введите никнейм",
   "passwordLengthError": "Пароль должен быть от 8 до 20 символов",
-  "passwordShouldContainAll": "Пароль должен содержать хотя бы одну букву, цифру и специальный символ"
+  "passwordShouldContainAll": "Пароль должен содержать хотя бы одну букву, цифру и специальный символ",
+  "streamSetup": "Настройка стрима",
+  "streamTitle": "Название стрима",
+  "enterStreamTitle": "Введите название стрима",
+  "enterStreamTitleError": "Пожалуйста, введите название стрима",
+  "streamDescription": "Описание",
+  "enterStreamDescription": "Опишите ваш стрим...",
+  "streamPreviewUrl": "URL превью",
+  "startStream": "Начать стрим"
 }
