feat(profile): refactor profile management with local and remote data sources
- Introduced LocalProfileDataSource and RemoteProfileDataSource for better separation of concerns.
- Implemented caching mechanisms for user profiles to enhance performance and reduce network calls.
- Updated ProfileRepository to utilize new data sources and handle profile retrieval and updates.
- Added use cases for getting and updating user profiles, ensuring clean architecture principles.
- Enhanced profile models and entities to support new features and data handling.
- Updated localization files to include new strings for UI elements.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,5 +77,6 @@
   "streamDescription": "Stream Description",
   "enterStreamDescription": "Describe your stream...",
   "streamPreviewUrl": "Preview URL",
-  "startStream": "Start Stream"
+  "startStream": "Start Stream",
+  "save": "Save"
 }
