--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -77,5 +77,6 @@
   "streamDescription": "Описание",
   "enterStreamDescription": "Опишите ваш стрим...",
   "streamPreviewUrl": "URL превью",
-  "startStream": "Начать стрим"
+  "startStream": "Начать стрим",
+  "save": "Сохранить"
 }
